test/spec_vectors/type-subtyping/ok/module_35.wat
(module (type $t1 (sub (func))) (type $t2 (sub final (func))) (func (import "M2" "f1") (type $t2)))