test/spec_vectors/type-subtyping/fail/module_75.wat
(module (type $f0 (sub (func))) (type $f1 (sub $f0 (func (param i32)))))